# old-survival

survival/: .gitmodules  Cargo.toml  build.rs
survival-game/: Cargo.toml
survival/dep/delaunay2d/: Cargo.toml  README.md
survival/dep/delaunay2d/src/: lib.rs
survival/dep/hibitset/src/: lib.rs
survival/resources/: input.ron
survival/resources/data/: actions.ron  items.ron  materials.rock.ron  test.items.ron
survival/resources/spritesheets/: Bisasam_16x16.ron
survival/resources/ui/: inventory.ron  main_ui.ron
survival/src/: actions.rs  fsm.rs  goap.rs  inventory.rs  lib.rs  map.rs  pathfinding.rs  tiles.rs  utils.rs
survival/src/assets/: body.rs  item.rs  material.rs  mod.rs  reactions.rs
survival/src/components/: ai.rs  mod.rs
survival/src/initializers/: mod.rs
survival/src/mapgen/: mod.rs
survival/src/render/tiles/: interleaved.rs  util.rs
survival/src/states/: first_load.rs  level.rs  mod.rs  paused.rs  running.rs
survival/src/systems/: debug.rs  goap_planner.rs  input.rs  mod.rs  movement.rs  script.rs  tile_position.rs  time.rs
survival/src/systems/ui/: imgui.rs  inventory_window.rs  ui.rs
survival/tools/region_generator/: main.rs
survival/tools/terrain_generator/: main.rs
